clusters/my-cluster/infrastucture/psql/postgressStatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14.5
        ports:
          - containerPort: 5432
            name: postgres-port
        volumeMounts:
        - name: postgresdata
          mountPath: /var/lib/postgresql/data/
        # - name: init-scripts
        #   mountPath: /docker-entrypoint-initdb.d

      volumes:
      - name: init-scripts
        configMap:
          name: postgres-init-scripts


      nodeSelector:
        storage: "yes"



  volumeClaimTemplates:
  - metadata:
      name: postgresdata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "data"
      resources:
        requests:
          storage: 1Gi
