clusters/my-cluster/infrastucture/psql/postgressStategfulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14.5
        ports:
          - containerPort: 5432
            name: postgres-port
        volumeMounts:
        - name: postgresdata
          mountPath: /var/lib/postgresql/data/
        - name: init-scripts
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-scripts
          configMap:
            name: postgres-init-scripts


      # nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: node.longhorn.io/default-node-tags
      #           operator: In
      #           values:
      #           - db


  volumeClaimTemplates:
  - metadata:
      name: postgresdata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "db"
      resources:
        requests:
          storage: 1Gi
