clusters/my-cluster/infrastucture/psql/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres-port
    targetPort: postgres-port
  clusterIP: None
  selector:
    app: postgres

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-np
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres-port
    targetPort: postgres-port
  type: LoadBalancer
  selector:
    app: postgres
