clusters/my-cluster/infrastucture/psql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psql
  # annotations:
    # cert-manager.io/issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
      - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres-np
                port:
                  number: 5432
